--- a/appmitra/src/main/res/layout/activity_auth.xml
+++ b/appmitra/src/main/res/layout/activity_auth.xml
@@ -13,7 +13,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="440dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
         app:cardMaxElevation="4dp"
