--- a/appmitra/src/main/res/layout/activity_service.xml
+++ b/appmitra/src/main/res/layout/activity_service.xml
@@ -9,6 +9,7 @@
     tools:context=".ServiceActivity">
 
     <ImageButton
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/ic_back_black_24dp"
