--- a/appmitra/src/main/res/layout/activity_service_detail.xml
+++ b/appmitra/src/main/res/layout/activity_service_detail.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Detail Pesanan"
+        android:text="@string/detail_pesanan"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
