--- a/appmitra/src/main/res/layout/fragment_login.xml
+++ b/appmitra/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="16dp"
@@ -45,26 +45,12 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <!--    <com.google.android.material.button.MaterialButton-->
-    <!--        android:id="@+id/btn_login"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="center_horizontal"-->
-    <!--        android:layout_marginTop="16dp"-->
-    <!--        android:paddingHorizontal="36dp"-->
-    <!--        android:paddingVertical="8dp"-->
-    <!--        android:text="@string/login"-->
-    <!--        android:textAllCaps="false"-->
-    <!--        android:textSize="18sp"-->
-    <!--        app:backgroundTint="@color/bluePrimary"-->
-    <!--        app:cornerRadius="15dp" />-->
-
     <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="16dp"
+        android:layout_marginVertical="24dp"
         android:text="@string/login"
         android:textAllCaps="false"
         android:textColor="@color/white"
