change icon appmitra

--- a/appmitra/src/main/res/layout/activity_auth.xml
+++ b/appmitra/src/main/res/layout/activity_auth.xml
@@ -30,18 +30,11 @@
             android:padding="16dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/logo_citor"
+                android:src="@drawable/logo_mitra"
                 tools:ignore="ContentDescription" />
-
-            <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tabs_auth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                app:tabTextColor="@color/bluePrimary" />
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/vp_auth"
