--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -49,6 +49,8 @@
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/poppins"
                 android:padding="4dp"
+                android:maxLength="25"
+                android:maxLines="2"
                 android:text="@string/jaya_makmur_wash"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -64,6 +66,8 @@
                 android:layout_marginEnd="28dp"
                 android:layout_toStartOf="@+id/tv_status"
                 android:fontFamily="@font/poppins"
+                android:maxLength="25"
+                android:maxLines="2"
                 android:padding="4dp"
                 android:text="@string/alamat_ex"
                 android:textColor="@color/white"
