--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,66 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_home"
     android:orientation="vertical"
     tools:context=".history.HistoryFragment">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@drawable/bg_header">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_history_header"
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/bg_header">
+
+            <TextView
+                android:id="@+id/tv_history_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/poppins"
+                android:text="@string/history"
+                android:textColor="@color/bluePrimary"
+                android:textSize="20sp" />
+        </FrameLayout>
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/cg_status_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            app:selectionRequired="true"
+            app:singleSelection="true">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_cat_progress"
+                style="@style/customChipStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/on_progress"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                app:checkedIcon="@drawable/ic_check"
+                app:checkedIconEnabled="true"
+                app:chipCornerRadius="10dp"
+                app:chipStrokeColor="@color/md_grey_500"
+                app:chipStrokeWidth="0.5dp" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip_cat_done"
+                style="@style/customChipStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/selesai"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                app:checkedIcon="@drawable/ic_check"
+                app:checkedIconEnabled="true"
+                app:chipCornerRadius="10dp"
+                app:chipStrokeColor="@color/md_grey_500"
+                app:chipStrokeWidth="0.5dp" />
+
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_history"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            tools:listitem="@layout/item_history" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/spin_kit"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            style="@style/SpinKitView.Large.FadingCircle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/poppins"
-            android:text="@string/history"
-            android:textColor="@color/bluePrimary"
-            android:textSize="20sp" />
-    </FrameLayout>
+            app:SpinKit_Color="@color/blue2" />
+    </LinearLayout>
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/cg_status_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        app:selectionRequired="true"
-        app:singleSelection="true">
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_cat_progress"
-            style="@style/customChipStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/on_progress"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            app:chipStrokeColor="@color/md_grey_500"
-            app:chipStrokeWidth="0.5dp" />
-
-        <com.google.android.material.chip.Chip
-            android:id="@+id/chip_cat_done"
-            style="@style/customChipStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/selesai"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            app:chipStrokeColor="@color/md_grey_500"
-            app:chipStrokeWidth="0.5dp" />
-
-    </com.google.android.material.chip.ChipGroup>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_history"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        tools:listitem="@layout/item_history" />
-</LinearLayout>
+</RelativeLayout>
