--- a/app/src/main/res/layout/fragment_vendor_schedule.xml
+++ b/app/src/main/res/layout/fragment_vendor_schedule.xml
@@ -16,16 +16,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal"
-        android:padding="4dp">
+        android:paddingHorizontal="16dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="16dp"
-            android:paddingTop="16dp">
+            android:paddingTop="8dp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
@@ -85,10 +85,11 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="8dp"
-            android:paddingTop="16dp">
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -142,10 +143,9 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="8dp"
-            android:paddingTop="16dp">
+            android:paddingTop="8dp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/value_monday_hour"
