--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -32,6 +32,31 @@
                 android:textOff=""
                 android:textOn=""
                 tools:ignore="RtlHardcoded,UsingOnClickInXml" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="8dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_rating_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="4dp"
+                    android:text="3.5"
+                    android:textColor="@color/md_amber_500"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_star_rating" />
+
+            </LinearLayout>
+
         </FrameLayout>
 
         <RelativeLayout
@@ -48,9 +73,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/poppins"
-                android:padding="4dp"
                 android:maxLength="25"
                 android:maxLines="2"
+                android:padding="4dp"
                 android:text="@string/jaya_makmur_wash"
                 android:textColor="@color/white"
                 android:textSize="14sp"
