--- a/app/src/main/res/layout/item_vendor.xml
+++ b/app/src/main/res/layout/item_vendor.xml
@@ -33,30 +33,6 @@
                 android:textOn=""
                 tools:ignore="RtlHardcoded,UsingOnClickInXml" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end|bottom"
-                android:layout_margin="8dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_rating_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="4dp"
-                    android:text="3.5"
-                    android:textColor="@color/md_amber_500"
-                    android:textSize="18sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_star_rating" />
-
-            </LinearLayout>
-
         </FrameLayout>
 
         <RelativeLayout
@@ -97,6 +73,32 @@
                 android:text="@string/alamat_ex"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_marginStart="12dp"
+                android:padding="2dp"
+                android:layout_below="@+id/tv_address"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_rating_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="4dp"
+                    android:text="3.5"
+                    android:textColor="@color/md_amber_500"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_star_rating" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_status"
