--- a/app/src/main/res/layout/item_wash_type.xml
+++ b/app/src/main/res/layout/item_wash_type.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginTop="4dp"
     android:orientation="vertical"
@@ -41,49 +41,57 @@
             android:textColor="@color/bluePrimary"
             android:textSize="16sp" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_name_type"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:maxWidth="180dp"
-            android:orientation="horizontal">
+            android:paddingVertical="8dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp"
-                android:textColor="@color/bluePrimary"
-                android:textSize="20sp"
-                tools:ignore="HardcodedText" />
+                android:layout_alignParentStart="true"
+                android:layout_centerInParent="true"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_price"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rp"
+                    android:textColor="@color/bluePrimary"
+                    android:textSize="20sp"
+                    tools:ignore="HardcodedText" />
+
+                <TextView
+                    android:id="@+id/tv_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:text="@string/harga"
+                    android:textColor="@color/bluePrimary"
+                    android:textSize="20sp" />
+
+            </LinearLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_choose_type"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:text="@string/harga"
-                android:textColor="@color/bluePrimary"
-                android:textSize="20sp" />
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="32dp"
+                android:text="@string/choose"
+                android:textColor="@android:color/holo_red_dark"
+                app:cornerRadius="20dp"
+                app:elevation="4dp"
+                app:rippleColor="@android:color/holo_red_dark"
+                app:strokeColor="@android:color/holo_red_dark"
+                tools:ignore="RelativeOverlap" />
 
-        </LinearLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_choose_type"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="4dp"
-            android:text="@string/choose"
-            android:textColor="@android:color/holo_red_dark"
-            app:cornerRadius="20dp"
-            app:elevation="4dp"
-            app:rippleColor="@android:color/holo_red_dark"
-            app:strokeColor="@android:color/holo_red_dark" />
+        </RelativeLayout>
     </RelativeLayout>
-
 </androidx.cardview.widget.CardView>
