--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -184,10 +184,10 @@
             android:id="@+id/btn_submit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:paddingHorizontal="36dp"
             android:paddingVertical="8dp"
-            android:text="Unggah"
+            android:text="Simpan"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="18sp"
