--- a/app/src/main/res/layout/activity_otp_input.xml
+++ b/app/src/main/res/layout/activity_otp_input.xml
@@ -10,7 +10,7 @@
     android:paddingHorizontal="32dp"
     android:paddingTop="32dp"
     android:paddingBottom="64dp"
-    tools:context=".auth.login.OtpInputActivity">
+    tools:context=".auth.register.OtpInputActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
